--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,9 @@
+
 body {
-    background-color:lightslategrey;
+    background-color: #f0f0f0;
+    padding-top: 2.5rem;
 }
 
 .card {
-    background-color: lightcyan;
+    background-color: rgb(255, 255, 255);
 }
